<resources>
    <string name="app_name">Covid 25</string>
    <string name="open">open NavigationDrawer</string>
    <string name="close">close NavigationDrawer</string>
    <string name="buutin2">arabic</string>
    <string name="buutin">English</string>
    <string-array name="countries">
        <item>"Cairo"</item>
        <item>"Alexandria"</item>
        <item>"Aswan"</item>
        <item>"Asyut"</item>
        <item>"Beheira"</item>
        <item>"Beni Suef"</item>
        <item>"Dakahlia"</item>
        <item>"Damietta"</item>
        <item>"Faiyum"</item>
        <item>"Gharbi"</item>
        <item>"Giza"</item>
        <item>"Ismailia	"</item>
        <item>"Kafr El Sheikh"</item>
        <item>"Luxor"</item>
        <item>"Matruh"</item>
        <item>"Minya"</item>
        <item>"Monufia"</item>
        <item>"North Sinai"</item>
        <item>"Port Said"</item>
        <item>"Qalyubia"</item>
        <item>"Qena"</item>
        <item>"Red Sea"</item>
        <item>"Sharqia"</item>
        <item>"Sohag"</item>
        <item>"South Sinai"</item>
        <item>"Suez"</item>
    </string-array>
    <string-array name="countries_">
        <item>"choose your city"</item>
        <item>"Cairo"</item>
        <item>"Alexandria"</item>
        <item>"Aswan"</item>
        <item>"Asyut"</item>
        <item>"Beheira"</item>
        <item>"Beni Suef"</item>
        <item>"Dakahlia"</item>
        <item>"Damietta"</item>
        <item>"Faiyum"</item>
        <item>"Gharbi"</item>
        <item>"Giza"</item>
        <item>"Ismailia"</item>
        <item>"Kafr El Sheikh"</item>
        <item>"Luxor"</item>
        <item>"Matruh"</item>
        <item>"Minya"</item>
        <item>"Monufia"</item>
        <item>"North Sinai"</item>
        <item>"Port Said"</item>
        <item>"Qalyubia	"</item>
        <item>"Qena"</item>
        <item>"Red Sea"</item>
        <item>"Sharqia"</item>
        <item>"Sohag"</item>
        <item>"South Sinai"</item>
        <item>"Suez"</item>
    </string-array>
    <string-array name="Minya">
        <item>"choose your district "</item>
        <item>"Magaga"</item>
        <item>"Bani Mazar"</item>
        <item>"Matay"</item>
        <item>"Samalout"</item>
        <item>"The city of Minya"</item>
        <item>"Abu Qurqas"</item>
        <item>"Mallawy"</item>
        <item>"Mawas"</item>
    </string-array>
    <string-array name="Sohag">
        <item>"choose your district "</item>
        <item>"Sohag"</item>
        <item>"Dar Al Salam"</item>
        <item>"Akhmim"</item>
        <item>"Maragha"</item>
        <item>"Gerga"</item>
        <item>"Tahta"</item>
        <item>"Tama"</item>
    </string-array>
    <string-array name="Suez">
        <item>"choose your district "</item>
        <item>"Suez district"</item>
        <item>"Arbaeen district"</item>
        <item>"Ataqa district"</item>
        <item>"Al-Ganayen District"</item>
        <item>"Faisal district"</item>
    </string-array>
    <string-array name="SouthSinai">
        <item>"choose your district "</item>
        <item>"Abu Rudeis"</item>
        <item>"Abu Zenima"</item>
        <item>"Nuweiba"</item>
        <item>"Dahab"</item>
        <item>"Ras Sidr"</item>
        <item>"Sharm El-Shaikh"</item>
        <item>"Saint Catherine"</item>
        <item>"AL Tour"</item>
    </string-array>
    <string-array name="RedSea">
        <item>"choose your district"</item>
        <item>"Ras Gharib"</item>
        <item>"Hurghada"</item>
        <item>"Safaga"</item>
        <item>"AL Kaser"</item>
        <item>"Marsa Alam"</item>
        <item>"Shalateen-and-Halayeb"</item>
    </string-array>
    <string-array name="Sharqia">
        <item>"choose your district"</item>
        <item>"Zagazig"</item>
        <item>"Husseinieh city"</item>
        <item>"The city of Faqous"</item>
        <item>"The city of Belbeis"</item>
        <item>"The city of Minya al-Qamh"</item>
        <item>"The city of Abu Hammad"</item>
        <item>"City of Saqr Sons"</item>
        <item>"Tenth of Ramadan City"</item>
    </string-array>
    <string-array name="Qena">
        <item>"choose your district "</item>
        <item>"Farshout"</item>
        <item>"Nag Hammadi"</item>
        <item>"West of Qena"</item>
        <item>"qous"</item>
        <item>"Deshna"</item>
        <item>"Al wakf"</item>
    </string-array>
    <string-array name="PortSaid">
        <item>"choose your district "</item>
        <item>"The city of Port Fouad"</item>
        <item>"South district"</item>
        <item>"Arab district"</item>
        <item>"East District"</item>
        <item>"Al-Dawahi District"</item>
        <item>"Al-Manakh district"</item>
        <item>"Al Zohoer"</item>
    </string-array>
    <string-array name="Qalyubia">
        <item>"choose your district "</item>
        <item>"Benha"</item>
        <item>"Qalyoub"</item>
        <item>"Al-Kanater Al-kharya"</item>
        <item>"Shubra Al Khaimah"</item>
        <item>"Khanka"</item>
        <item>"Kafr Shukr"</item>
        <item>"Shibin Al-Kanater "</item>
        <item>"Tookh"</item>
    </string-array>
    <string-array name="NorthSinai">
        <item>"choose your district "</item>
        <item>"Bir al-Abed"</item>
        <item>"Nakhl"</item>
        <item>"Al hasna"</item>
        <item>"Arish"</item>
        <item>"Sheikh Zuweid"</item>
        <item>"Rafah"</item>
    </string-array>
    <string-array name="cairo_district">
        <item>"choose your district "</item>
        <item>"As-Salam district first"</item>
        <item>"As-Salam second district"</item>
        <item>"Al-Al-Mataria District"</item>
        <item>"Al-Nuzha District"</item>
        <item>"Ain Shams district"</item>
        <item>"East Nasr City district"</item>
        <item>"West Nasr City district"</item>
        <item>"Heliopolis  district"</item>
        <item>"Azbika district"</item>
        <item>"Mosky  district "</item>
        <item>"Waili District"</item>
        <item>"Bab Al-Sharia District"</item>
        <item>"Bulaq district"</item>
        <item>"Abdeen district"</item>
        <item>"Manshaet Nasser district "</item>
        <item>"West district"</item>
        <item>"Central district"</item>
        <item>"May 15th district"</item>
        <item>"Al-Basatine  district "</item>
        <item>"Al-Tebeen District"</item>
        <item>"Caliph district"</item>
        <item>"El Sayeda Zeinab district"</item>
        <item>"Maadi District"</item>
        <item>"Al-Maasara District "</item>
        <item>"Mokattam district"</item>
        <item>"Helwan district"</item>
        <item>"Dar Al Salam district"</item>
        <item>"Tora district"</item>
        <item>"Old Cairo District"</item>
        <item>"Al-Amiriya  district"</item>
        <item>"Al-Zawiya Al-Hamra district"</item>
        <item>"Al-Zaytoun District"</item>
        <item>"Al-Sahel  District "</item>
        <item>"Sharabia district "</item>
        <item>"Hadayek al-Qobba district"</item>
        <item>"Rawd al-Farag district"</item>
        <item>"Shubra district district"</item>
    </string-array>
    <string-array name="Alexandria">
        <item>"choose your district "</item>
        <item>"Central Alexandria District"</item>
        <item>"East Alexandria District"</item>
        <item>"West Alexandria District"</item>
        <item>"Al-Muntazah District "</item>
        <item>"Customs District "</item>
        <item>"Amiriya District"</item>
    </string-array>
    <string-array name="Faiyum">
        <item>"choose your district "</item>
        <item>"Ibshway"</item>
        <item>"Tamiya"</item>
        <item>"Fayoum"</item>
        <item>"Atsa"</item>
        <item>"Snores"</item>
        <item>"AL Fayoum Al gedada"</item>
        <item>"Youessf Al sedak"</item>
    </string-array>
    <string-array name="Monufia">
        <item>"choose your district "</item>
        <item>"Ashmoun"</item>
        <item>"The Bagour"</item>
        <item>"Barkt Al Sabh"</item>
        <item>"Menouf"</item>
        <item>"Sadat"</item>
        <item>"Tala"</item>
        <item>"Al Shhdea"</item>
        <item>"Shbeen El Koom"</item>
        <item>"Quesna"</item>
    </string-array>
    <string-array name="Aswan">
        <item>"choose your district "</item>
        <item>"Edfu District"</item>
        <item>"Draw District"</item>
        <item>"Aswan District"</item>
        <item>"Victory of Nuba District"</item>
    </string-array>
    <string-array name="Luxor">
        <item>"choose your district"</item>
        <item>"Luxor"</item>
        <item>"Zinnia Center"</item>
        <item>"Qurna"</item>
        <item>"Bayadeya"</item>
        <item>"Tud"</item>
        <item>"Armant"</item>
    </string-array>
    <string-array name="Matruh">
        <item>"choose your district"</item>
        <item>"AL hamam"</item>
        <item>"El Alamein"</item>
        <item>"El Dabaa"</item>
        <item>"Marsa Matrouh"</item>
        <item>"Najela"</item>
        <item>"Prani"</item>
        <item>"Salloum"</item>
        <item>"Siwa"</item>
    </string-array>
    <string-array name="Ismailia">
        <item>"choose your district "</item>
        <item>"Ismailia"</item>
        <item>Al Tall Al Kaberر"</item>
        <item>"Fayed"</item>
        <item>"Qantara East"</item>
        <item>"Qantara West"</item>
        <item>"Abu Swear"</item>
        <item>"Al Kasisen"</item>
    </string-array>
    <string-array name="KafrElSheikh">
        <item>"Kafr El Sheikh"</item>
        <item>"Burullus"</item>
        <item>"Bella"</item>
        <item>"Al Hamol"</item>
        <item>"Desouq"</item>
        <item>"Al Riyadh"</item>
        <item>"Sir Salm"</item>
        <item>"foh"</item>
        <item>"Qaleen"</item>
        <item>"Kafr El Sheikh"</item>
        <item>"Motobs"</item>
    </string-array>
    <string name="home">Home</string>
    <string name="lab">Lab</string>
    <string name="hospital">Hospital</string>
    <string name="pharmacy">pharmacy</string>
    <string name="sign_out">sign out</string>
    <string name="settings">settings</string>
    <string name="check_your_city">check your city</string>
    <string name="al_mogat_al_sawtiya">Al mogat Al sawtiya</string>
    <string name="normal_rays">Normal rays</string>
    <string name="ct_scan">CT scan</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="log_in">LOG In !</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="do_not_have_an_account">do not have an account</string>
    <string name="create">create</string>
    <string name="log_in_">Log in</string>
    <string name="order">Order</string>
    <string name="mostafa">mostafa</string>
    <string name="cancel">cancel</string>
    <string name="yes">yes</string>
    <string name="cartshope">Cartshope</string>
    <string name="book_now">book now</string>
    <string name="waiting_time">waiting time:</string>
    <string name="price">price:</string>
    <string name="pound">pound</string>
    <string name="scan_name">scan name</string>
    <string name="available">Available:</string>
    <string name="minute">minute</string>
    <string name="news">news</string>
    <string name="your_name">your name</string>
    <string name="your_phone">your phone</string>
    <string name="your_address">your address</string>
    <string name="your_age">your age</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="confirm">confirm</string>
    <string name="map">Map</string>
</resources>