<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/mo7"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activity.Abd_Lab">

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="sawtita"
        android:background="@drawable/shapeone"
        android:text="@string/al_mogat_al_sawtiya"
        android:textSize="20sp"

        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="rays"
        android:text="@string/normal_rays"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:onClick="ct"
        android:text="@string/ct_scan"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>