<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/as"

    android:fitsSystemWindows="true"
    tools:context=".Login.LoginScreen">

    <TextView
        android:id="@+id/on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18sp"
        android:layout_marginTop="15sp"
        android:fontFamily="fantasy"
        android:text="@string/welcome_back"
        android:textColor="#fff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/oz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/on"
        android:layout_marginLeft="20sp"
        android:fontFamily="fantasy"
        android:text="@string/log_in"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_above="@id/my_textbox_Email"
        android:layout_centerInParent="true"
        android:layout_marginBottom="20dp"
        android:scaleType="fitXY"
        android:src="@drawable/bela" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/my_textbox_Email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginBottom="15dp"
        app:endIconMode="clear_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="fantasy"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/my_textbox_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_textbox_Email"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
        android:layout_marginBottom="10dp"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="fantasy"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/fr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_textbox_password"
        android:layout_marginLeft="28dp"
        android:text="Forget password?"
        android:textColor="#0044FF"
        android:textSize="15sp" />



    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/fr"
        android:layout_centerInParent="true"
        android:layout_marginLeft="50sp"
        android:layout_marginRight="50sp"
        android:background="@drawable/asd"
        android:fontFamily="fantasy"
        android:gravity="center"
        android:padding="7dp"
        android:text="@string/log_in_"
        android:textColor="#fff"
        android:textSize="20sp"
        android:textStyle="bold" />
    <LinearLayout

        android:id="@+id/lins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn_login"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="80dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/gust_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:fontFamily="fantasy"
            android:text="@string/do_not_have_an_account" />

        <TextView
            android:id="@+id/createAccuont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:fontFamily="fantasy"
            android:text="@string/create"
            android:textColor="#0044FF" />
    </LinearLayout>
</RelativeLayout>