<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    app:cardMaxElevation="25dp">

    <!--    <RelativeLayout-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:layout_margin="8dp">-->

    <!--        -->
    <!--    </RelativeLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_headphone"
                android:text="price"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:text="@string/scan_name"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_scan_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="chest scan"
                android:textColor="#000"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_view_for_mogat_swtya_price"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_money"
                android:text="price"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_for_price"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:text="@string/price"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView

                android:id="@+id/text_for_real_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="75"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/pound"
                android:textColor="#000"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:orientation="horizontal">

            <ImageView

                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:src="@drawable/ic_time"
                android:text="price"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_margin="3dp"
                android:text="@string/waiting_time"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_wating_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="75"
                android:textColor="#000"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:text="@string/minute"
                android:textColor="#000"
                android:textSize="17sp" />
        </LinearLayout>

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2.4"
            android:orientation="horizontal">

            <Button
android:id="@+id/book_now"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="#f00"
                android:backgroundTint="#f00"
                android:text="@string/book_now" />

            <LinearLayout

                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_weight="1.4"
                android:background="#11000000"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:text="@string/available"
                    android:textColor="#000"
                    android:textSize="13sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text_Available_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:text="today is Available"
                    android:textColor="#000"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>